--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,10 @@
-:root {
+body{
+  margin: 0;
+  padding: 0; 
+}
+
+
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -39,4 +45,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
