--- a/app/Components/DiscountHeader/style.css
+++ b/app/Components/DiscountHeader/style.css
@@ -4,5 +4,8 @@
     padding: 32px;
     text-align: center;
     color: #ffffff;
-    font-size: 30px;
+    font-size: 24px;
+    font-family: var(--font-tajawal), sans-serif;
+    font-weight: bold
 }
+    
