--- a/app/Components/Button/Button.module.css
+++ b/app/Components/Button/Button.module.css
@@ -37,6 +37,7 @@
   font-size: 17px;
   gap: 10px;
   border-radius: 10px;
+  border: none;
 }
 
 .medium {
@@ -49,6 +50,7 @@
   border-radius: 5px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   gap: 10px;
+  border: none;
 }
 
 .large {
