fix button comp

--- a/components/ui/ACAButton/ACAButton.module.css
+++ b/components/ui/ACAButton/ACAButton.module.css
@@ -2,16 +2,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Tajawal", sans-serif;
   color: #ffffff;
 }
 
 .transparent {
   background-color: transparent;
+  border: 1px solid #ffffff;
 }
 .primary {
   background-color: var(--primary-color);
 }
+
 
 .secondary {
   background-color: var(--secondary-color);
@@ -54,10 +55,16 @@
   padding: 26px 51px;
   min-width: 100px;
   height: 40px;
-  font-weight: 500;
-  font-size: 15px;
   gap: 8px;
   font-weight: 900;
+}
+
+.xlarge {
+  font-size: 15px;
+  min-width: 180px;
+  height: 45px;
+  font-weight: 500;
+  border-radius: 6px;
 }
 
 @media (min-width: 600px) and (max-width: 900px) {
@@ -91,11 +98,17 @@
     padding: 26px 51px;
     min-width: 330px;
     height: 85px;
-    font-weight: 500;
-    font-size: 15px;
     gap: 15px;
     font-weight: 900;
     border-radius: 10px;
+  }
+
+  .xlarge {
+    font-size: 15px;
+    min-width: 180px;
+    height: 45px;
+    font-weight: 500;
+    border-radius: 6px;
   }
 }
 
@@ -128,10 +141,17 @@
     padding: 26px 51px;
     min-width: 310px;
     height: 80px;
-    font-weight: 500;
     font-size: 15px;
     gap: 10px;
     font-weight: 900;
     border-radius: 10px;
+  }
+
+  .xlarge {
+    font-size: 15px;
+    min-width: 270px;
+    height: 60px;
+    font-weight: 500;
+    border-radius: 6px;
   }
 }
