--- a/components/ui/PromoText/PromoText.module.css
+++ b/components/ui/PromoText/PromoText.module.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 300px;
   min-height: 507px;
-  padding: 15px;
+  padding: 30px 16px 25px 19px;
   background-color: #ffffff;
   border-radius: 5px;
   box-shadow: 0px 1px 20px 2px rgba(0, 0, 0, 0.25);
@@ -18,11 +18,11 @@
 }
 
 .title {
-  font-size: 15px;
+  font-size: 18px;
   font-weight: 700;
   color: var(--primary-color);
   line-height: 21.6px;
-  margin-bottom: 16px;
+  margin-bottom: 12px;
 }
 
 .content {
@@ -31,11 +31,11 @@
   color: var(--primary-color);
   line-height: 30px;
   text-align: center;
+  margin-bottom: 10px;
 }
 
 .buttonContainer {
   position: absolute;
-  bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
   white-space: nowrap;
@@ -45,7 +45,7 @@
   .container {
     width: 646px;
     min-height: 460px;
-    padding: 50px 35px;
+    padding: 82px 39px 134px 32px;
     border-radius: 10px;
     box-shadow: 0px 1px 20px 2px rgba(0, 0, 0, 0.25);
   }
@@ -54,7 +54,15 @@
     font-size: 20px;
     font-weight: 700;
     line-height: 30px;
-    margin-bottom: 60px;
+    margin-bottom: 82px;
+  }
+
+  .titleWithButton {
+    margin-bottom: 40px;
+  }
+
+  .titleWithoutButton {
+    margin-bottom: 82px;
   }
 
   .content {
@@ -66,13 +74,17 @@
   .withBorder {
     border: 3px solid var(--primary-color);
   }
+
+  .buttonContainer {
+    margin-top: 39px;
+  }
 }
 
 @media (min-width: 901px) {
   .container {
     width: 646px;
     min-height: 460px;
-    padding: 50px 35px;
+    padding: 62px 70px 71px 56px;
     border-radius: 10px;
     box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.25);
   }
@@ -81,7 +93,14 @@
     font-size: 18px;
     font-weight: 700;
     line-height: 30px;
-    margin-bottom: 60px;
+  }
+
+  .titleWithButton {
+    margin-bottom: 34px;
+  }
+
+  .titleWithoutButton {
+    margin-bottom: 109px;
   }
 
   .content {
