--- a/sections/InteractiveTools/InteractiveTools.module.css
+++ b/sections/InteractiveTools/InteractiveTools.module.css
@@ -18,6 +18,7 @@
   .interactive-tools {
     display: flex;
     justify-content: center;
+    height: 640px;
   }
   .promo-text-container {
     left: 50%;
