--- a/components/ui/PromoText/PromoText.module.css
+++ b/components/ui/PromoText/PromoText.module.css
@@ -11,6 +11,7 @@
 
 .withBorder {
   border: 1px solid var(--primary-color);
+  box-shadow: none;
 }
 
 .overlay {
@@ -73,6 +74,7 @@
 
   .withBorder {
     border: 3px solid var(--primary-color);
+    box-shadow: none;
   }
 
   .buttonContainer {
@@ -111,5 +113,6 @@
 
   .withBorder {
     border: 3px solid var(--primary-color);
+    box-shadow: none;
   }
 }
