--- a/components/ui/ACAButton/ACAButton.module.css
+++ b/components/ui/ACAButton/ACAButton.module.css
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: center;
   color: #ffffff;
+  transition: 0.3s;
 }
 
 .transparent {
@@ -69,12 +70,17 @@
 .button {
   cursor: pointer;
 }
+
 .tomato:hover {
   background-color: #fa4e27;
 }
 
 .teal:hover {
   background-color: #04b08e;
+}
+
+.primary:hover {
+  background-color: var(--secondary-color);
 }
 
 @media (min-width: 600px) and (max-width: 900px) {
