--- a/components/ui/ResourceCard/ResourceCard.module.css
+++ b/components/ui/ResourceCard/ResourceCard.module.css
@@ -2,9 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: white;
+  justify-content: center;
   margin: auto;
-  width: 204px;
   padding-top: 18px;
   text-align: center;
   border-radius: 5px;
@@ -40,7 +39,7 @@
   padding-bottom: 17px;
 }
 
-@media (min-width: 480px) and (max-width: 768px) {
+@media (min-width: 767px) and (max-width: 1440px) {
   .container {
     width: 150px;
     padding-top: 30px;
@@ -68,7 +67,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1440px) {
   .container {
     width: 300px;
     padding-top: 63px;
