--- a/components/ui/FeedbackCard/FeedbackCard.module.css
+++ b/components/ui/FeedbackCard/FeedbackCard.module.css
@@ -2,6 +2,7 @@
   width: 260px;
   height: 255px;
   border-radius: 5px;
+  margin: 20px auto;
   box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.1);
   position: relative;
   display: flex;
