--- a/components/ui/SearchBar/SearchBar.module.css
+++ b/components/ui/SearchBar/SearchBar.module.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 2px solid #713488;
+  border: 2px solid var(--primary-color);
   border-radius: 50px;
   box-sizing: border-box;
   background-color: white;
@@ -19,7 +19,7 @@
   align-items: center;
   justify-content: center;
   height: 100%;
-  border-right: #713488 solid 4px;
+  border-right: var(--primary-color) solid 4px;
   padding-right: 3%;
   padding-left: 4%;
 }
@@ -34,7 +34,7 @@
   outline: none;
   font-size: 18px;
   font-weight: 400;
-  color: #713488;
+  color: var(--primary-color);
   text-align: right;
   direction: rtl;
   width: 85%;
@@ -43,7 +43,7 @@
 }
 
 .input::placeholder {
-  color: #713488ad;
+  color: var(--primary-color)ad;
 }
 
 @media (max-width: 1440px) {
@@ -76,7 +76,7 @@
 
   .icon {
     height: 100%;
-    border-right: #713488 solid 2px;
+    border-right: var(--primary-color) solid 2px;
   }
   .svgIcon {
     width: 17.66px;
