--- a/components/ui/CourseCard/CourseCard.module.css
+++ b/components/ui/CourseCard/CourseCard.module.css
@@ -1,18 +1,24 @@
 .card {
+  margin: 20px auto;
   width: 350px;
   height: 509px;
-  box-shadow: 0 1px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 15px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   direction: rtl;
+  position: relative;
 }
 
-.avatar {
-  width: 350px;
+.avatar-container {
+  width: 100%;
   height: 286px;
-  background: url("../../../public/images/course-html.png") no-repeat #ff6542
-    center center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #ff6542 center center;
   border-radius: 10px 10px 0 0;
 }
+
+
 
 .card_body {
   display: flex;
@@ -48,16 +54,17 @@
   direction: ltr;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   .card {
+    border-radius: 0px;
     width: 260px;
     height: 377.86px;
   }
 
-  .avatar {
-    width: 260px;
+  .avatar-container {
     height: 228px;
     background-size: 139.72px 139.72px;
+    border-radius: 0;
   }
 
   .card_body {
@@ -86,4 +93,13 @@
     margin: 0 auto;
     margin-left: 2rem;
   }
+  .avatar {
+    width: 125px;
+  }
+}
+
+.soon {
+  position: absolute;
+  left: -6px;
+  top: -8px;
 }
