--- a/sections/Home/Courses/Courses.module.css
+++ b/sections/Home/Courses/Courses.module.css
@@ -1,23 +1,31 @@
 .search-container {
-  width: 90%;
-  margin: auto;
+  margin-block: 211px;
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
   align-items: end;
   margin-bottom: 84px;
 }
 
-@media (max-width: 1440px) {
-  .search-container {
-    margin-bottom: 36px;
-    justify-content: center;
-  }
+.soon-container {
+  margin-block: 211px;
+  display: flex;
+  justify-content: end;
+  margin-top: 83px;
+  margin-bottom: 65px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1440px) {
   .search-container {
+    margin: 0px;
     margin-bottom: 36px;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    gap: 35px;
+  }
+  .soon-container {
+    justify-content: center;
+    margin-bottom: 33px;
+    margin-top: 52px;
   }
 }
