--- a/sections/Home/QuizzSection/QuizzSection.module.css
+++ b/sections/Home/QuizzSection/QuizzSection.module.css
@@ -19,7 +19,7 @@
 .iconHeading {
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
   gap: 10px;
 }
 
