--- a/components/ui/ResourceCard/ResourceCard.module.css
+++ b/components/ui/ResourceCard/ResourceCard.module.css
@@ -8,13 +8,14 @@
   text-align: center;
   border-radius: 5px;
   position: relative;
+  height: 297px;
 }
 
 .iconContainer {
   background-color: #783ba2;
   border-radius: 50%;
   width: 120px;
-  height: 111px;
+  min-height: 114px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -25,9 +26,9 @@
   color: #713488;
   font-size: 18px;
   font-weight: 700;
-  line-height: 21.6px;
+  line-height: 21px;
   margin-bottom: 47px;
-  width: var(--title-width-mobile);
+  max-width: 149px;
 }
 
 .buttonContainer {
@@ -45,11 +46,12 @@
     padding-top: 30px;
     border-radius: 0;
     box-shadow: none;
+    min-height: 433px;
   }
 
   .iconContainer {
-    width: 173.31px;
-    height: 173.31px;
+    width: 173px;
+    height: 173px;
     margin-bottom: 24px;
   }
 
@@ -57,7 +59,7 @@
     font-size: 25px;
     line-height: 30px;
     margin-bottom: 57px;
-    width: var(--title-width-tablet);
+    max-width: 226px;
   }
 
   .buttonContainer {
@@ -73,6 +75,7 @@
     padding-top: 63px;
     border-radius: 0;
     box-shadow: none;
+    min-height: 450px;
   }
 
   .iconContainer {
@@ -86,7 +89,7 @@
     line-height: 27.6px;
     height: 56px;
     margin-bottom: 37px;
-    width: var(--title-width-desktop);
+    min-width: 220px;
   }
 
   .buttonContainer {
