--- a/sections/Home/VideoSection/VideoSection.module.css
+++ b/sections/Home/VideoSection/VideoSection.module.css
@@ -2,6 +2,7 @@
   position: relative;
   height: 533px;
   width: 100%;
+  margin-top: -15px;
   overflow: hidden;
   text-align: center;
   display: flex;
@@ -54,6 +55,7 @@
     position: relative;
     height: 801px;
     width: 100%;
+    margin-top: -30px;
   }
 
   .video {
@@ -109,6 +111,7 @@
 @media (min-width: 1441px) and (max-width: 1670px) {
   .main {
     height: 1068px;
+    margin-top: -30px;
     width: 100%;
     flex-direction: row;
     align-items: center;
@@ -162,7 +165,7 @@
   .main {
     height: 1068px;
     width: 100%;
-
+    margin-top: -40px;
     flex-direction: row;
     align-items: center;
     justify-content: center;
