--- a/components/ui/Navbar/Navbar.module.css
+++ b/components/ui/Navbar/Navbar.module.css
@@ -10,6 +10,7 @@
 }
 
 .links {
+  cursor: pointer;
   display: flex;
   flex: row;
   gap: 40px;
@@ -30,6 +31,39 @@
   display: flex;
   gap: 3px;
   align-items: center;
+  position: relative;
+}
+
+.resouces-menu {
+  background-color: white;
+  position: absolute;
+  top: 36px;
+  width: 240px;
+  z-index: 40;
+  color: var(--primary-color);
+  transform: translateX(-35%);
+  border-radius: 10px;
+  padding: 15px 20px;
+}
+
+.resouces-menu li {
+  transition: 0.4px;
+  padding: 15px 0px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19px;
+  text-align: center;
+  text-decoration-skip-ink: none;
+  border-bottom: 1px solid var(--primary-color);
+  text-shadow: none;
+}
+
+.resouces-menu li:last-child {
+  border-bottom: none;
+}
+
+.resouces-menu li:hover {
+  background-color: #71348814;
 }
 
 .burger-menu {
@@ -42,6 +76,10 @@
   gap: 25px;
   align-items: center;
   cursor: pointer;
+}
+
+.arrowDown {
+  transition: 0.5s;
 }
 
 @media (max-width: 1440px) {
@@ -59,6 +97,9 @@
 }
 
 @media (max-width: 1200px) {
+  .resouces-menu {
+    display: none;
+  }
   .buttons-container {
     display: none;
   }
