--- a/components/ui/FooterLinks/FooterLinks.module.css
+++ b/components/ui/FooterLinks/FooterLinks.module.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
 .links_container {
@@ -24,6 +25,7 @@
 
 .button_layout {
   margin-top: 5.4rem;
+  direction: ltr;
 }
 
 @media (max-width: 767px) {
