--- a/components/ui/Sidebar/Sidebar.module.css
+++ b/components/ui/Sidebar/Sidebar.module.css
@@ -33,8 +33,29 @@
   border-bottom: 1px solid #713488;
 }
 
+.notpressed {
+  margin-inline: 18px;
+  margin-top: 0px;
+  background: white;
+  color: #713488;
+  border-radius: 0px;
+}
+
+.pressed {
+  margin-inline: 0px;
+  margin-top: -1px;
+  background: var(--primary-color);
+  color: white;
+  border-radius: 10px;
+}
+
 .menuItem:last-child {
   border-bottom: none;
+}
+
+.subMenu:last-child {
+  margin-inline: 18px;
+  border-bottom: 1px solid #713488;
 }
 
 .icon {
@@ -47,12 +68,6 @@
   height: 15px;
 }
 
-.dropdown {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .meanuHeader {
   display: flex;
   align-items: center;
@@ -62,10 +77,18 @@
 .subMenu {
   display: block;
   list-style: none;
-  padding: 0;
+  text-align: center;
+  box-shadow: "none";
+  background: white;
+}
+
+.subMenuOpen {
+  display: block;
+  list-style: none;
   text-align: center;
   background-color: #71348814;
-  border-radius: 10;
+  border-radius: 10px;
+  box-shadow: #00000031 0px 1px 5px 1px;
 }
 
 .subMenuItem {
