--- a/components/ui/CarouselSlider/CarouselSlider.module.css
+++ b/components/ui/CarouselSlider/CarouselSlider.module.css
@@ -9,17 +9,25 @@
   margin: 5px;
   cursor: pointer;
   position: absolute;
-  bottom: -90px;
+  bottom: -60px;
 }
 
 @media (min-width: 1671px) {
   .dots {
-  bottom: -60px
+    bottom: -15px;
   }
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 1400px) {
   .dots {
-    bottom: -20px;
+    bottom: 5px;
   }
 }
+
+
+@media (max-width: 1200px) {
+  .dots {
+    bottom: 10px;
+  }
+}
+
