--- a/sections/Home/Hero/Hero/HeroComponent.module.css
+++ b/sections/Home/Hero/Hero/HeroComponent.module.css
@@ -24,7 +24,6 @@
 
 .right-headings {
   width: 637px;
-  height: 179px;
   font-size: 40px;
   font-weight: 900;
   line-height: 48px;
@@ -41,10 +40,16 @@
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
   width: 683px;
-  height: 96px;
   display: flex;
   flex-direction: column;
   gap: 30px;
+}
+.centerButton {
+  display: none;
+}
+
+.bottomButton {
+  margin-bottom: 40px;
 }
 
 @media (min-width: 1671px) {
@@ -59,7 +64,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 200px;
+    gap: 15px;
   }
   .left,
   .left-headings,
@@ -82,7 +87,7 @@
   .left {
     align-items: center;
     width: 722px;
-    gap: 130px;
+    gap: 31px;
   }
   .main {
     padding-top: 0%;
@@ -90,8 +95,17 @@
 }
 
 @media (max-width: 1199px) {
+  .bottomButton {
+    display: none;
+  }
+
+  .centerButton {
+    margin-block: 30px;
+    display: block;
+  }
+
   .headings {
-    gap: 100px;
+    gap: 0px;
   }
   .left-headings {
     font-size: 16px;
@@ -99,6 +113,7 @@
     line-height: 19.2px;
     width: 315px;
     gap: 20px;
+    margin-bottom: 52px;
   }
 
   .right-headings {
