--- a/components/ui/FooterLinks/FooterLinks.module.css
+++ b/components/ui/FooterLinks/FooterLinks.module.css
@@ -23,6 +23,11 @@
   padding: 12px 0;
 }
 
+.lists ul li a {
+  padding: 12px 0;
+  color: white;
+}
+
 .button_layout {
   margin-top: 5.4rem;
   direction: ltr;
