--- a/components/ui/Navbar/Navbar.module.css
+++ b/components/ui/Navbar/Navbar.module.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 20px;
+  color: white;
 }
 
 .links {
@@ -17,6 +18,7 @@
 }
 
 .links li {
+  color: white;
   font-weight: 700;
   font-size: 18px;
   text-shadow: 0px 4px 5px #00000057;
