--- a/components/ui/AIToolCard/AIToolCard.module.css
+++ b/components/ui/AIToolCard/AIToolCard.module.css
@@ -2,7 +2,24 @@
   direction: rtl;
   width: 400px;
   box-shadow: 0 1px 20px 1px #00000040;
-  margin: 5rem auto;
+  position: relative;
+}
+
+.favorite {
+  position: absolute;
+  top: 15px;
+  left: 14px;
+}
+
+.favorite button {
+  width: 50px;
+  height: 50px;
+  background-color: #ffffff;
+  box-shadow: 0px 2px 4px 2px #00000040;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
 }
 
 .card_body {
