--- a/app/ai-tools/AITools.module.css
+++ b/app/ai-tools/AITools.module.css
@@ -1,3 +1,12 @@
+.search-container {
+  margin-top: 172px;
+  margin-inline: 115px;
+  margin-bottom: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .loading-container {
   transition: 0.6s;
   height: 100vh;
@@ -12,4 +21,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width: 1320px) {
+  .search-container {
+    margin-inline: 0px;
+
+    flex-direction: column;
+    gap: 40px;
+    justify-content: center;
+  }
 }
