--- a/app/ai-tools/AIToolsList/AIToolsList.module.css
+++ b/app/ai-tools/AIToolsList/AIToolsList.module.css
@@ -1,17 +1,13 @@
 .attools-list-container {
   display: grid;
-  padding: 110px;
   justify-content: center;
   grid-row-gap: 60px;
   grid-column-gap: 24px;
   grid-template-columns: repeat(auto-fill, 400px);
+  margin-bottom: 164px;
+  margin-inline: 40px;
 }
 
-@media (max-width: 1280px) {
-  .attools-list-container {
-    padding: 53px;
-  }
-}
 @media (max-width: 767px) {
   .attools-list-container {
     grid-template-columns: repeat(auto-fill, 280px);
