--- a/components/ui/FormField/FormField.module.css
+++ b/components/ui/FormField/FormField.module.css
@@ -33,9 +33,12 @@
   line-height: 16px;
   font-weight: 400;
   box-sizing: border-box;
-  color: #a067b6;
   background-color: #fff;
   direction: rtl;
+}
+
+.formInput::placeholder {
+  color: #a067b6;
 }
 
 @media (min-width: 768px) {
