--- a/components/ui/AIToolCard/AIToolCard.module.css
+++ b/components/ui/AIToolCard/AIToolCard.module.css
@@ -11,14 +11,32 @@
   }
 }
 
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  to {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+}
+
 .card {
   opacity: 0;
   direction: rtl;
   background-color: white;
   box-shadow: 0 1px 20px 1px #00000040;
+  position: relative;
+}
+
+.fade-in {
   animation: fadeIn 0.8s forwards;
   visibility: visible;
-  position: relative;
+}
+
+.fade-out {
+  animation: fadeOut 0.5s forwards;
 }
 
 .favorite {
@@ -72,13 +90,13 @@
 }
 
 .line_clamp {
-  display: -webkit-box; /* For WebKit-based browsers */
+  display: -webkit-box;
   line-clamp: 4;
-  -webkit-line-clamp: 4; /* Limits the text to 2 lines */
+  -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  text-overflow: ellipsis; /* Adds dots at the end */
-  direction: rtl; /* Ensures proper Arabic alignment */
+  text-overflow: ellipsis;
+  direction: rtl;
 }
 
 .card_footer button {
