--- a/components/ui/Navbar/Navbar.module.css
+++ b/components/ui/Navbar/Navbar.module.css
@@ -38,6 +38,7 @@
 
 .resouces-menu {
   background-color: white;
+
   position: absolute;
   top: 36px;
   width: 240px;
@@ -49,6 +50,7 @@
 }
 
 .resouces-menu li {
+  color: var(--primary-color);
   transition: 0.4px;
   padding: 15px 0px;
   font-size: 16px;
@@ -116,6 +118,10 @@
   .image {
     width: 155.48px;
     height: 30px;
+    cursor: pointer;
+  }
+  .image-contanier {
+    cursor: pointer;
   }
   .logout {
     display: none;
