fix: handle race condition

--- a/components/ui/Navbar/Navbar.module.css
+++ b/components/ui/Navbar/Navbar.module.css
@@ -38,7 +38,7 @@
 
 .resouces-menu {
   background-color: white;
-
+  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.274);
   position: absolute;
   top: 36px;
   width: 240px;
