--- a/components/ui/SearchBar/SearchBar.module.css
+++ b/components/ui/SearchBar/SearchBar.module.css
@@ -14,15 +14,30 @@
   background-color: white;
 }
 
+.active-searchBar {
+  border: 2px solid var(--primary-color);
+}
+
+.disabled-searchBar {
+  border: 2px solid #9e9e9e;
+}
+
 .icon {
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%;
-  border-right: var(--primary-color) solid 4px;
   padding-right: 3%;
   padding-left: 4%;
+}
+
+.active-icon {
+  border-right: var(--primary-color) solid 4px;
+}
+
+.disabled-icon {
+  border-right: #9e9e9e solid 4px;
 }
 
 .svgIcon {
@@ -35,12 +50,19 @@
   outline: none;
   font-size: 18px;
   font-weight: 400;
-  color: var(--primary-color);
   text-align: right;
   direction: rtl;
   width: 85%;
   height: 22px;
   margin: 24px 28px 19px 0px;
+}
+
+.active-input {
+  color: var(--primary-color);
+}
+
+.disabled-input {
+  color: #9e9e9e;
 }
 
 .input::selection {
