feat: make more entry points for aitools page and fix some routing issues

--- a/app/ai-tools/AITools.module.css
+++ b/app/ai-tools/AITools.module.css
@@ -23,6 +23,13 @@
   align-items: center;
 }
 
+.error-container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media (max-width: 1320px) {
   .search-container {
     margin-top: 123px;
