--- a/components/ui/Navbar/Navbar.module.css
+++ b/components/ui/Navbar/Navbar.module.css
@@ -38,7 +38,7 @@
 
 .resouces-menu {
   background-color: white;
-  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.274);
+  box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.329);
   position: absolute;
   top: 36px;
   width: 240px;
