--- a/components/ui/PromoText/PromoText.module.css
+++ b/components/ui/PromoText/PromoText.module.css
@@ -1,8 +1,8 @@
 .container {
   position: relative;
   width: 300px;
-  min-height: 507px;
-  padding: 30px 16px 25px 19px;
+  min-height: 351px;
+  padding: 12px 16px 25px 19px;
   background-color: #ffffff;
   border-radius: 5px;
   box-shadow: 0px 1px 20px 2px rgba(0, 0, 0, 0.25);
@@ -25,7 +25,7 @@
   font-size: 14px;
   font-weight: 500;
   color: var(--primary-color);
-  line-height: 30px;
+  line-height: 20px;
   text-align: center;
   margin-bottom: 10px;
 }
@@ -37,10 +37,10 @@
   white-space: nowrap;
 }
 
-@media (min-width: 600px) and (max-width: 900px) {
+@media (min-width: 768px) and (max-width: 1400px) {
   .container {
-    width: 580px;
-    min-height: 460px;
+    width: 791px;
+    min-height: 591px;
     padding: 82px 39px 134px 32px;
     border-radius: 10px;
     box-shadow: 0px 1px 20px 2px rgba(0, 0, 0, 0.25);
@@ -62,9 +62,10 @@
   }
 
   .content {
-    font-size: 19px;
+    font-size: 20px;
     font-weight: 500;
-    line-height: 30px;
+    line-height: 40px;
+    min-width: 641px;
   }
 
   .buttonContainer {
@@ -72,19 +73,19 @@
   }
 }
 
-@media (min-width: 901px) {
+@media (min-width: 1400px) {
   .container {
-    width: 646px;
-    min-height: 460px;
+    min-width: 791px;
+    min-height: 591px;
     padding: 62px 70px 71px 56px;
     border-radius: 10px;
     box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.25);
   }
 
   .title {
-    font-size: 18px;
+    font-size: 27px;
     font-weight: 700;
-    line-height: 30px;
+    line-height: 40px;
   }
 
   .titleWithButton {
@@ -92,13 +93,19 @@
   }
 
   .titleWithoutButton {
-    margin-bottom: 65px;
+    margin-bottom: 109px;
   }
 
   .content {
-    font-size: 17px;
+    font-size: 19px;
     font-weight: 500;
-    line-height: 30px;
+    line-height: 40px;
+    width: 665px;
+  }
+
+  .buttonContainer {
+    margin-top: 56px;
+    padding-bottom: 71px;
   }
 }
 
