--- a/sections/Home/LearningPath/LearningPath.module.css
+++ b/sections/Home/LearningPath/LearningPath.module.css
@@ -1,21 +1,20 @@
 .learning_path_section {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   padding: 4rem;
-  gap: 4rem;
+  gap: 72px;
 }
 
 .img_container {
   position: relative;
   width: 100%;
   height: auto;
-  object-fit: cover;
 }
 
 .img {
   width: 100%;
-  height: auto;
+  object-fit: cover;
 }
 
 .promotext_style {
@@ -23,23 +22,56 @@
   flex-direction: column;
   align-items: center;
   gap: 22px;
+  margin-top: 37px;
 }
 
-@media (max-width: 1400px) {
+.promotext_style div:first-child {
+  min-height: 507px;
+}
+
+@media (min-width: 768px) and (max-width: 1440px) {
   .learning_path_section {
     flex-direction: column-reverse;
-    gap: 2rem;
+    gap: 10px;
+  }
+
+  .promotext_style div:first-child {
+    width: 646px;
+    min-height: 460px;
+    padding-bottom: 27px;
+    padding-top: 64px;
+  }
+
+  .promotext_style div:first-child p {
+    min-width: 575px;
+    line-height: 30px;
+    font-size: 19px;
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 767px) {
   .learning_path_section {
+    flex-direction: column-reverse;
     padding: 1rem;
-    gap: 1rem;
+    gap: 0;
   }
 
   .img_container {
     width: 300px;
     height: auto;
+  }
+
+  .img {
+    width: 300px;
+  }
+
+  .promotext_style div:first-child {
+    width: 300px;
+    min-height: 487px;
+  }
+
+  .promotext_style div:first-child p {
+    font-size: 14px;
+    line-height: 30px;
   }
 }
