--- a/components/ui/FormField/FormField.module.css
+++ b/components/ui/FormField/FormField.module.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  color: #000000;
 }
 
 .labelContainer {
@@ -77,7 +78,6 @@
     line-height: 21px;
     font-weight: 400;
     box-sizing: border-box;
-    color: #a067b6;
     background-color: #fff;
     direction: rtl;
   }
@@ -118,7 +118,6 @@
     line-height: 21px;
     font-weight: 400;
     box-sizing: border-box;
-    color: #a067b6;
     background-color: #fff;
     direction: rtl;
   }
