--- a/components/ui/FormField/FormField.module.css
+++ b/components/ui/FormField/FormField.module.css
@@ -42,6 +42,57 @@
   color: #a067b6;
 }
 
+.selectInput {
+  width: 100%;
+  position: relative;
+}
+
+.selectInput select {
+  width: 100%;
+  height: 50px;
+  padding: 0 12px;
+  border: 1px solid #783ba2;
+  border-radius: 8px;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 500;
+  background-color: #fff;
+  color: #783ba2;
+  appearance: none; 
+  direction: rtl;
+}
+
+.selectInput select:focus {
+  outline: none;
+  border: 1px solid #5a2b90;
+}
+
+.selectInput option {
+  color: #A067B6;
+  background-color: #fff;
+}
+
+.selectInput option[disabled] {
+  color: #a067b6;
+}
+
+.selectInput svg {
+  position: absolute;
+  top: 50%;
+  left: 18px;
+  transform: translateY(-50%);
+  color: #783ba2;
+}
+.selectInput .divider {
+  position: absolute;
+  top:1px;
+  left: 50px;
+  width: 1px;
+  height: 99%;
+  background-color: #783ba2;
+  margin: 0 10px;
+}
+
 @media (min-width: 768px) {
   .fieldContainer {
     width: 744px;
