--- a/components/ui/FormField/FormField.module.css
+++ b/components/ui/FormField/FormField.module.css
@@ -3,18 +3,27 @@
   height: 79px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
+  text-align: right; 
   color: #000000;
+}
+
+.centerAlign {
+  align-items: center; 
+  text-align: center;
+}
+
+.rightAlign {
+  align-items: flex-end; 
+  text-align: right;
 }
 
 .labelContainer {
   display: flex;
-  align-items: center;
-  margin-bottom: 10px;
   justify-content: flex-end;
+  margin-bottom: 10px;
   gap: 2px;
 }
+
 
 .formLabel {
   color: #783ba2;
