--- a/components/ui/SignupForms/SignupFormOne/SignupFormOne.module.css
+++ b/components/ui/SignupForms/SignupFormOne/SignupFormOne.module.css
@@ -1,6 +1,5 @@
 .formContainer {
   width: 300px;
-  height: 743px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,7 +31,7 @@
   width: 263px;
   font-weight: 400;
   font-size: 13px;
-  line-height: 16px;
+  line-height: 15px;
   text-align: center;
   margin-top: -50px;
 }
@@ -71,11 +70,10 @@
 @media (min-width: 768px) {
   .formContainer {
     width: 872px;
-    height: 1017px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px 18px 46px 18px;
+    padding: 82px 61px 80px 61px;
     box-shadow: 0px 1px 20px 2px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
   }
@@ -128,12 +126,21 @@
     margin-top: 30px;
     gap: 29px;
   }
+
+  .errorText {
+    color: #db4a39;
+    width: 100%;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 20px;
+    text-align: right;
+    margin-top: -55px;
+  }
 }
 
 @media (min-width: 1640px) {
   .formContainer {
     width: 889px;
-    height: 1000px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -189,5 +196,15 @@
     display: flex;
     margin-top: 33px;
     gap: 20px;
+  }
+
+  .errorText {
+    color: #db4a39;
+    width: 100%;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: right;
+    margin-top: -55px;
   }
 }
