--- a/components/ui/FormField/FormField.module.css
+++ b/components/ui/FormField/FormField.module.css
@@ -147,6 +147,14 @@
     background-color: #fff;
     direction: rtl;
   }
+
+  .errorInput {
+    border: 1px solid #db4a39;
+  }
+
+  .selectInput select.errorInput {
+    border-color: red;
+  }
 }
 
 @media (min-width: 1640px) {
@@ -186,5 +194,12 @@
     box-sizing: border-box;
     background-color: #fff;
     direction: rtl;
+  }
+  .errorInput {
+    border: 1px solid #db4a39;
+  }
+  
+  .selectInput select.errorInput {
+    border-color: red;
   }
 }
