--- a/components/ui/ResourceCard/ResourceCard.module.css
+++ b/components/ui/ResourceCard/ResourceCard.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: auto;
+  margin: 20px auto;
   padding-top: 18px;
   text-align: center;
   border-radius: 5px;
