fix: refactor code, check folder structure, delete unused files, and enhance seo and performance

--- a/components/ui/AIToolCard/AIToolCard.module.css
+++ b/components/ui/AIToolCard/AIToolCard.module.css
@@ -30,6 +30,10 @@
   position: relative;
 }
 
+.image {
+  width: "100%";
+}
+
 .fade-in {
   animation: fadeIn 0.8s forwards;
   visibility: visible;
