--- a/sections/Home/Hero/Hero.module.css
+++ b/sections/Home/Hero/Hero.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   margin-left: -4px;
   background-position: center;
-  background-image: url("/images/heroSection/header.jpg");
+  background-image: url("/images/heroSection/header.webp");
   background-size: cover;
   height: 831px;
   color: white;
