--- a/app/profile/components/ProfileDetails/ProfileDetails.module.css
+++ b/app/profile/components/ProfileDetails/ProfileDetails.module.css
@@ -1,7 +1,81 @@
 .container {
   width: 1072px;
-  height: 426px;
   box-shadow: 0px 1px 10px 1px #00000040;
   border: 1px solid #783ba2;
   border-radius: 10px;
+  color: var(--primary-color);
+  display: flex;
+  flex-direction: column;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 56px 111px 24px 39px;
+  align-items: end;
+}
+
+.header-details {
+  display: flex;
+  gap: 45px;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 6px;
+}
+
+.profileImage {
+  width: 200px;
+  height: 200px;
+  box-shadow: 0px 1px 10px 1px #00000040;
+  border-radius: 50%;
+}
+
+.icon-container {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+.user-name {
+  font-size: 27px;
+  font-weight: 700;
+}
+
+.icon-label {
+  font-size: 18px;
+  font-weight: 500;
+  direction: rtl;
+}
+
+.location {
+  margin-bottom: 20px;
+}
+
+.links-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 10px;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 10px;
+}
+
+.link-container {
+  display: flex;
+  align-items: flex-start;
+  gap: 5px;
+}
+
+.link-label a {
+  font-size: 18px;
+  font-weight: 700;
 }
