--- a/components/ui/Navbar/Navbar.module.css
+++ b/components/ui/Navbar/Navbar.module.css
@@ -75,17 +75,29 @@
   cursor: pointer;
 }
 
+.image-contanier {
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  cursor: pointer;
+}
+
 .userInfo {
   display: flex;
   align-items: center;
   gap: 8px;
+  padding: 8px 16px;
+  border-radius: 8px;
   cursor: pointer;
 }
 
 .userName {
-  color: #333;
+  color: white;
   font-size: 14px;
   font-weight: 500;
+  text-shadow: 0px 4px 5px #00000057;
+  direction: rtl;
 }
 
 .logout {
@@ -94,8 +106,6 @@
   gap: 16px;
   cursor: pointer;
 }
-
-
 
 .arrowDown {
   transition: 0.3s;
