--- a/app/profile/components/ProfileDetails/ToggleButtons/ToggleButtons.module.css
+++ b/app/profile/components/ProfileDetails/ToggleButtons/ToggleButtons.module.css
@@ -16,6 +16,7 @@
   font-weight: 700;
   transition: 0.4s;
   cursor: pointer;
+  background-color: white;
 }
 
 .active-button {
@@ -27,4 +28,25 @@
   display: flex;
   align-items: center;
   gap: 7px;
+}
+
+@media (max-width: 1040px) {
+  .toggle-container {
+    height: 111px;
+    background-color: white;
+    position: absolute;
+    display: flex;
+    flex-direction: column-reverse;
+    border-top: none;
+    left: 50%;
+    bottom: -100px;
+    transform: translateX(-50%);
+    box-shadow: 0px 2px 11px 13px #00000012;
+  }
+  .toggle-button {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    gap: 32px;
+    font-size: 14px;
+  }
 }
