--- a/app/profile/components/CoursesDetails/CourseInfo/CourseInfo.module.css
+++ b/app/profile/components/CoursesDetails/CourseInfo/CourseInfo.module.css
@@ -1,9 +1,23 @@
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+    scale: 1.02;
+  }
+  to {
+    scale: 1;
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .container {
   width: 776px;
   background-color: white;
   box-shadow: 0px 1px 10px 1px #00000040;
   border-radius: 10px;
   padding: 18px 31px;
+  animation: fadeIn 0.6s forwards;
 }
 
 .header {
@@ -75,8 +89,8 @@
   height: 100%;
   background-color: var(--primary-color);
   transition: 0.6s;
-  width: var(--progress-width, 0%);
-  animation: fill 0.6s;
+  animation: fill 0.6s forwards;
+  animation-delay: 0.5s;
 }
 
 @media (max-width: 1440px) {
