--- a/app/signin/page.module.css
+++ b/app/signin/page.module.css
@@ -1,65 +1,146 @@
 .loginContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f8f9fa;
-  }
-  
-  .formContainer {
-    width: 400px;
-    padding: 2rem;
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .title {
-    font-size: 24px;
-    font-weight: bold;
-    color: #783ba2;
-    text-align: center;
-    margin-bottom: 1.5rem;
-  }
-  
-  .errorText {
-    color: red;
-    font-size: 14px;
-    margin-top: -10px;
-  }
-  
-  .optionsContainer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 1rem;
-  }
-  
-  .checkboxLabel {
-    font-size: 14px;
-    color: #666;
-  }
-  
-  .forgotPassword {
-    font-size: 14px;
-    color: #007bff;
-    text-decoration: none;
-  }
-  
-  .buttonContainer {
-    display: flex;
-    justify-content: space-between;
-    margin: 1rem 0;
-  }
-  
-  .divider {
-    text-align: center;
-    color: #888;
-    margin: 1rem 0;
-  }
-  
-  .socialContainer {
-    display: flex;
-    justify-content: space-between;
-  }
-  
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 60px;
+}
+
+.formContainer {
+  width: 270px;
+  background: #ffffff;
+  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+}
+
+.imageContainer {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+}
+
+.formContent {
+  padding: 34px 21px 32px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.felidsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 62px;
+  margin-bottom: 62px;
+  position: relative;
+}
+
+.checkboxLabel {
+  width: 78px;
+  display: flex;
+  flex-direction: row-reverse;
+  position: relative;
+  cursor: pointer;
+  font-size: 15px;
+  color: #783ba2;
+  font-weight: 500;
+  line-height: 18px;
+  align-items: center;
+}
+
+.checkboxLabel input {
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: absolute;
+  top: 1;
+  right: -23px;
+  height: 17px;
+  margin: 4px;
+  width: 17px;
+  background-color: #fff;
+  border: 1px solid #783ba2;
+  border-radius: 2px;
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+}
+
+.checkboxLabel:hover input ~ .checkmark {
+  background-color: #f3e8ff;
+}
+
+.checkboxLabel input:checked ~ .checkmark {
+  background-color: #783ba2;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.checkboxLabel input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.checkboxLabel .checkmark:after {
+  left: 5px;
+  top: 2px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+
+.errorMessage {
+  position: absolute;
+  color: #DB4A39;
+  font-size: 14px;
+  text-align: center;
+  line-height: 17px;
+  margin-bottom: 20px;
+  font-weight: 400;
+  width: 100%;
+  top: 220px;
+}
+
+.optionsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: 10px;
+  margin-bottom: 23px;
+}
+
+.forgotPassword {
+  font-size: 15px;
+  color: #783ba2;
+  text-decoration: none;
+  cursor: pointer;
+  font-weight: 500;
+  line-height: 18px;
+}
+
+.buttonContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  margin-bottom: 29px;
+}
+
+.divider {
+  text-align: center;
+  color: #783ba2;
+  font-size: 15px;
+  font-weight: 700;
+  margin-bottom: 23px;
+}
+
+.socialContainer {
+  display: flex;
+  gap: 14px;
+}
